Spelling fix, added alphabet sections, changed alignment

--- a/main.css
+++ b/main.css
@@ -46,6 +46,16 @@ body{
         line-height: 10px;
     }
 
+    .alphabet-subgrid{
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows:auto;
+    }
+
+.alphabet-header{
+    display:block;
+}
     #alphabet p {
         line-height: 1;
     }
@@ -105,7 +115,8 @@ h4{
 h5{
     font-size: 35px;
     color:black;
-    margin: 25px;
+    /* margin: 20px; */
+    line-height: 15px;
     padding-left: 20px;
 }
 
